Fixed manage bubble overlap bug

For long usernames, the username was overlapping the x button in the
manage bubble. This was caused by a bug in the grid layout. This cl
is a workaround for the spesific cases where the username and/or
password is too long.

For long username & short password:
Username label's length is limited to the available space, that is,
bubble width - paddings - close button.

For short username & long password:
Username label's length is the preferred length. The password label
gets the available space left after the paddings, close button and
username label's lenght are reduced from the bubble width.

For other cases:
The implementation before this fix is kept since it had no problems.

Warning: This cl only covers the manage bubble and does not change
the ui of save or update password cases. Those will be fixed in the
following cls.

Bug: 758157
Change-Id: I6f7c2c8e1c37b47654d2ab5dbb546717e440b819
Reviewed-on: https://chromium-review.googlesource.com/647717
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Commit-Queue: Irmak Kavasoğlu <irmakk@google.com>
Cr-Commit-Position: refs/heads/master@{#499522}
Former-commit-id: 32610359311e5146a809dc73001746e1e9793cc8