chrome/browser/ui/views/passwords/manage_password_items_view.h
@@ -33,7 +33,8 @@ class ManagePasswordItemsView : public views::View {
  public:
   ManagePasswordItemsView(
       ManagePasswordsBubbleModel* manage_passwords_bubble_model,
-      const std::vector<autofill::PasswordForm>* password_forms);
+      const std::vector<autofill::PasswordForm>* password_forms,
+      int bubble_width);
 
  private:
   class PasswordFormRow;
@@ -49,6 +50,7 @@ class ManagePasswordItemsView : public views::View {
 
   std::vector<std::unique_ptr<PasswordFormRow>> password_forms_rows_;
   ManagePasswordsBubbleModel* model_;
+  const int bubble_width_;
 
   DISALLOW_COPY_AND_ASSIGN(ManagePasswordItemsView);
 };
